Fix navigation on smallest of screens

--- a/app/assets/stylesheets/media.css.scss
+++ b/app/assets/stylesheets/media.css.scss
@@ -120,6 +120,39 @@
    }
 }
 
+@media screen and (max-width: 450px) {
+  div.banner {
+    .bannerLogo img {
+      width: 50%;
+    }
+    .breadcrumb {
+      box-sizing: border-box;
+      width: 50%;
+      margin: 0;
+      padding-left: 5%;
+      font-size: 2em;
+      line-height: 2;
+      text-align: center;
+    }
+    div.nav {
+      width: 100%;
+      text-align: center;
+      ul {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      li {
+        float: none;
+      }
+      a {
+        padding: 1% 2%;
+        height: auto;
+      }
+    }
+  }
+}
+
 /* Tablets and smaller desktops ----------- */
 @media screen and (min-width: 768px) and (max-width: 1090px) {
 
